@@ -1,3 +1,14 @@
+2007-11-01  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tkMacOSXColor.c (GetThemeColor): improve translation of RGB
+				pixel values into RGBColor.
+
+	* library/demos/widget:	increase height of main window text widget to
+				use more of the available vertical space.
+
+	* doc/bind.n:		document the Option modifier, clarify meaning
+				and availability of Command & Option.
+
 2007-11-01  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* unix/installManPage, doc/*.n: Make documentation use the name that
@@ -5,7 +16,7 @@
 
 	* doc/text.n: Fixed mistake in [$t tag remove] docs. [Bug 1792191]
 
-	* doc/bind.n: Documentated the Command modifier. [Bug 1232908]
+	* doc/bind.n: Documented the Command modifier. [Bug 1232908]
 
 	* doc/console.n, doc/wish.1: Made it clearer when and why the console
 	command is present. [Bug 1386955]
